--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+vyatta-cfg-vpn (0.3) unstable; urgency=low
+
+  VC4.0.1
+  [ Mark O'Brien ]
+
+
+  [ Stephen Hemminger ]
+  * Replace VPL with GPLv2
+  * Convert from VPL 1.0 to GPLv2
+
+  [ Mark O'Brien ]
+
+ -- Mark O'Brien <mobrien@vyatta.com>  Tue, 18 Mar 2008 16:59:32 -0700
+
 vyatta-cfg-vpn (0.2) unstable; urgency=low
 
   vc4.0.0
