Indicate the VC4.0.2 release candidate in the changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ vyatta-cfg-vpn (0.6) unstable; urgency=low
 
 vyatta-cfg-vpn (0.5) unstable; urgency=low
 
-  VC4.0.2
+  VC4.0.2 release candidate
   [ Mark O'Brien ]
 
 
