--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+vyatta-cfg-vpn (0.12) unstable; urgency=low
+
+	  3.2.0
+  [ Mark O'Brien ]
+
+
+  [ Mohit Mehta ]
+  * allow '+' as a valid character in pre-shared-secret
+
+  [ Stig Thormodsrud ]
+  * Remove unused rsa keys.
+
+  [ Mohit Mehta ]
+  * Part of fix for bug 3762 Update help and error strings for vpn pre-
+    shared secret value
+
+  [ Mark O'Brien ]
+
+ -- Mark O'Brien <mobrien@firebolt.vyatta.com>  Tue, 25 Nov 2008 19:09:27 -0800
+
 vyatta-cfg-vpn (0.11) unstable; urgency=low
 
 	  3.1.2
