--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+vyatta-cfg-vpn (0.12.1) unstable; urgency=low
+
+  [ An-Cheng Huang ]
+  * add support for development build
+
+  [ Stephen Hemminger ]
+  * Rename VyattaVPNUtil to Vyatta::VPNUtil
+  * Convert to Vyatta:: hierarchy
+
+  [ An-Cheng Huang ]
+  * update maintainer information
+  * "files" file should be removed before package build
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Thu, 08 Jan 2009 09:26:01 -0800
+
 vyatta-cfg-vpn (0.12) unstable; urgency=low
 
 	  3.2.0
