--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.6) unstable; urgency=low
+
+  * Bugfix 3284: Allow commit to succeed if local-ip is not configured.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Wed, 08 Apr 2009 18:04:59 -0700
+
 vyatta-cfg-vpn (0.12.5) unstable; urgency=low
 
   * Bugfix 2387: Don't list interfaces in ipsec config file.
