--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.7) unstable; urgency=low
+
+  * Fix 3836: Allow VPN authentication ID to accept values of IP
+    address, domain name and "" enclosed phrases
+
+ -- Stig Thormodsrud <stig@vyatta.com>  Tue, 26 May 2009 18:51:05 -0700
+
 vyatta-cfg-vpn (0.12.6) unstable; urgency=low
 
   * Bugfix 3284: Allow commit to succeed if local-ip is not configured.
