--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.8) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Fri, 29 May 2009 18:35:35 -0700
+
 vyatta-cfg-vpn (0.12.7) unstable; urgency=low
 
   * Fix 3836: Allow VPN authentication ID to accept values of IP
