--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.7+jenner2) unstable; urgency=low
+
+  * Fix 4623: Removing IPSEC VPN config without removing cluster ipsec
+    config drops all interfaces.
+
+ -- Stig Thormodsrud <stig@vyatta.com>  Fri, 10 Jul 2009 13:44:52 -0700
+
 vyatta-cfg-vpn (0.12.7+jenner1) unstable; urgency=low
 
   * UNRELEASED
