--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.12) unstable; urgency=low
+
+  * Fix 4902: setting ipsec site-to-site tunnel with authentication id
+    <> and local-ip 0.0.0.0 got "no connection named <>"
+
+ -- Stig Thormodsrud <stig@vyatta.com>  Fri, 04 Sep 2009 17:16:42 -0700
+
 vyatta-cfg-vpn (0.12.11) unstable; urgency=low
 
   * add enable node below tunnel with default flag = true
