--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.14) unstable; urgency=low
+
+  * add allowed values for ike, esp groups
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Fri, 09 Oct 2009 18:36:18 -0700
+
 vyatta-cfg-vpn (0.12.13) unstable; urgency=low
 
   * Fix Bug 3011 Remote VPN configuration issues site-to-site warning
