--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.19) unstable; urgency=low
+
+  * vyatta-cfg-vpn depends on vyatta-ipsec provided by vyatta-strongswan
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Fri, 20 Nov 2009 17:54:25 -0800
+
 vyatta-cfg-vpn (0.12.18) unstable; urgency=low
 
   * dependency update
