--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.19) unstable; urgency=low
+
+  * pptp config check not needed when vpn ipsec is configured
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Wed, 25 Nov 2009 15:59:16 -0800
+
 vyatta-cfg-vpn (0.12.18) unstable; urgency=low
 
   * dependency update
