--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.21) unstable; urgency=low
+
+  * pptp config check not needed when vpn ipsec is configured
+  * 0.12.19
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Wed, 25 Nov 2009 16:05:50 -0800
+
 vyatta-cfg-vpn (0.12.19) unstable; urgency=low
 
   * pptp config check not needed when vpn ipsec is configured
