--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.21) unstable; urgency=low
+
+  * no need to maintain state of connections and take state-specific
+    actions for
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Wed, 25 Nov 2009 20:48:52 -0800
+
 vyatta-cfg-vpn (0.12.20) unstable; urgency=low
 
   * First pass code changes to vyatta-cfg-vpn for migration to
