--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+vyatta-cfg-vpn (0.12.22) unstable; urgency=low
+
+  * vyatta-cfg-vpn depends on vyatta-ipsec provided by vyatta-strongswan
+  * 0.12.19
+  * First pass code changes to vyatta-cfg-vpn for migration to
+    strongswan :
+  * 0.12.20
+  * no need to maintain state of connections and take state-specific
+    actions for
+  * 0.12.21
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Wed, 25 Nov 2009 20:49:18 -0800
+
 vyatta-cfg-vpn (0.12.21) unstable; urgency=low
 
   * no need to maintain state of connections and take state-specific
