--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.23) unstable; urgency=low
+
+  * add comment to identify end of connection description
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Sat, 28 Nov 2009 01:12:29 -0800
+
 vyatta-cfg-vpn (0.12.22) unstable; urgency=low
 
   * vyatta-cfg-vpn depends on vyatta-ipsec provided by vyatta-strongswan
