--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.27) unstable; urgency=low
+
+  * add back CLI node for disabling uniqreqid
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Mon, 25 Jan 2010 14:35:18 -0800
+
 vyatta-cfg-vpn (0.12.26) unstable; urgency=low
 
   * bump up ipsec version
