--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.29) unstable; urgency=low
+
+  * Fix Bug 1832 VPN copy-tos Disabling copy-tos field doesn't work
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Sat, 30 Jan 2010 13:45:09 -0800
+
 vyatta-cfg-vpn (0.12.28) unstable; urgency=low
 
   * remove dead code. we use 'ipsec update' to update changes to
