--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.30) unstable; urgency=low
+
+  * 1. use correct notation to represent private,public networks
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Fri, 05 Feb 2010 19:06:12 -0800
+
 vyatta-cfg-vpn (0.12.29) unstable; urgency=low
 
   * Fix Bug 1832 VPN copy-tos Disabling copy-tos field doesn't work
