--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.32) unstable; urgency=low
+
+  * Fix Bug 5087 add support to specify PFS group when PFS is enabled
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Thu, 18 Mar 2010 14:56:04 -0700
+
 vyatta-cfg-vpn (0.12.31) unstable; urgency=low
 
   * UNRELEASED
