--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.30+kenwood2) unstable; urgency=low
+
+  * Fix Bug 5500  Unable to establish a VPN connection from a remote
+    peer with a
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Fri, 16 Apr 2010 19:32:22 -0700
+
 vyatta-cfg-vpn (0.12.30+kenwood1) unstable; urgency=low
 
   * UNRELEASED
