--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.35) unstable; urgency=low
+
+  * Fix Bug 5542
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Mon, 19 Apr 2010 18:48:05 -0700
+
 vyatta-cfg-vpn (0.12.34) unstable; urgency=low
 
   * Fix Bug 5500  Unable to establish a VPN connection from a remote
