--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.37) unstable; urgency=low
+
+  * Fix Bug 5652 set ike/ipsec keying tries to forever
+
+ -- Mohit Mehta <mohit.mehta@vyatta.com>  Thu, 03 Jun 2010 16:36:11 -0700
+
 vyatta-cfg-vpn (0.12.36) unstable; urgency=low
 
   * add passthrough connection if remote-subnet contains local-subnet
