--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.39) unstable; urgency=low
+
+  * remove unused options
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Thu, 22 Jul 2010 11:32:45 -0700
+
 vyatta-cfg-vpn (0.12.38) unstable; urgency=low
 
   * remove verb usage from begining of help strings
