--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.42) unstable; urgency=low
+
+  * remove low-level config dir usage
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Tue, 17 Aug 2010 18:24:29 -0700
+
 vyatta-cfg-vpn (0.12.41) unstable; urgency=low
 
   * update help text to use val_help
