--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.43) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- An-Cheng Huang <ancheng@vyatta.com>  Thu, 02 Sep 2010 18:28:36 -0700
+
 vyatta-cfg-vpn (0.12.42) unstable; urgency=low
 
   * remove low-level config dir usage
