--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vyatta-cfg-vpn (0.12.46) unstable; urgency=low
+
+  * error location support changes to vpn (local-ip and auth missing
+    only at this time).
+  * more location based error support.
+
+ -- Michael Larson <mike@vyatta.com>  Mon, 17 Jan 2011 12:11:55 -0800
+
 vyatta-cfg-vpn (0.12.45) unstable; urgency=low
 
   * new branch
