--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.52) unstable; urgency=low
+
+  * Fixed node.def to adhere to CLI conventions
+
+ -- John Southworth <john.southworth@vyatta.com>  Wed, 26 Jan 2011 11:24:14 -0600
+
 vyatta-cfg-vpn (0.12.51) unstable; urgency=low
 
   * Bug 2506: Moved the connection-type node to the peer level, as
