--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.57) unstable; urgency=low
+
+  * Make vpn errors and exiting consistent
+
+ -- John Southworth <john.southworth@vyatta.com>  Mon, 31 Jan 2011 17:09:33 -0600
+
 vyatta-cfg-vpn (0.12.56) unstable; urgency=low
 
   * Fix problem with multiple psk being generated per peer
