--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.60) unstable; urgency=low
+
+  * Add the ability to define a default esp group for tunnels under a
+    peer to use
+
+ -- John Southworth <john.southworth@vyatta.com>  Fri, 04 Feb 2011 17:48:59 -0600
+
 vyatta-cfg-vpn (0.12.59) unstable; urgency=low
 
   * Move protocol out of local and remote nodes as it has to be the same
