--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.61) unstable; urgency=low
+
+  * change ipsec config version
+  * change ipsec config version
+
+ -- John Southworth <john.southworth@vyatta.com>  Fri, 04 Feb 2011 19:20:42 -0600
+
 vyatta-cfg-vpn (0.12.60) unstable; urgency=low
 
   * Add the ability to define a default esp group for tunnels under a
