--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.62) unstable; urgency=low
+
+  * change ipsec config version in Makefile as well
+
+ -- Mohit Mehta <mohit@vyatta.com>  Fri, 04 Feb 2011 18:34:18 -0800
+
 vyatta-cfg-vpn (0.12.61) unstable; urgency=low
 
   * change ipsec config version
