--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.65) unstable; urgency=low
+
+  * Add template for auto-update cli
+
+ -- John Southworth <john.southworth@vyatta.com>  Wed, 09 Feb 2011 13:45:44 -0600
+
 vyatta-cfg-vpn (0.12.64) unstable; urgency=low
 
   * Initial x509 for site-to-site ipsec vpn
