--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vyatta-cfg-vpn (0.12.73) unstable; urgency=low
+
+  * Add bond interfaces to available dhcp interfaces in tab completion
+  * Make sure only interfaces with dhcp enabled are allowed as a dhcp-
+    interface
+  * Fix some dhcp config problems
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 22 Feb 2011 19:58:49 -0600
+
 vyatta-cfg-vpn (0.12.72) unstable; urgency=low
 
   * Fix minor x509 configuration error message problem
