--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.81) unstable; urgency=low
+
+  * Bugfix 6767: Move /tmp/ipsec.log to /var/log/vyatta and rotate it.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Wed, 15 Jun 2011 18:29:05 -0700
+
 vyatta-cfg-vpn (0.12.80) unstable; urgency=low
 
   * Bugfix 7145: same changes were needed for site-to-site as well
