--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.82) unstable; urgency=low
+
+  * new branch
+
+ -- Deepti Kulkarni <deepti@vyatta.com>  Thu, 07 Jul 2011 20:56:08 -0700
+
 vyatta-cfg-vpn (0.12.81) unstable; urgency=low
 
   * Bugfix 6767: Move /tmp/ipsec.log to /var/log/vyatta and rotate it.
