--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.81+napa2) unstable; urgency=low
+
+  * Remove no longer mandatory nodes so that VPN will work smoothly with
+    webgui2
+
+ -- John Southworth <john.southworth@vyatta.com>  Mon, 11 Jul 2011 18:41:40 -0500
+
 vyatta-cfg-vpn (0.12.81+napa1) unstable; urgency=low
 
   * new branch
