--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vyatta-cfg-vpn (0.12.84) unstable; urgency=low
+
+  * Switched POSIX character classes to standard character classes
+    representing the same data; removed unneeded '.' from regex; add
+    similar regex to match remote-id
+
+ -- John Southworth <john.southworth@vyatta.com>  Mon, 19 Sep 2011 16:59:20 -0500
+
 vyatta-cfg-vpn (0.12.83) unstable; urgency=low
 
   * Remove no longer mandatory nodes so that VPN will work smoothly with
