--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.85) unstable; urgency=low
+
+  * Bugfix 6839: Warn that pre-shared key changes aren't loaded until a
+    rekey interval
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 28 Feb 2012 13:32:32 -0800
+
 vyatta-cfg-vpn (0.12.84) unstable; urgency=low
 
   * Switched POSIX character classes to standard character classes
