--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.86) unstable; urgency=low
+
+  * Fix uninitilized  bug
+
+ -- John Southworth <john.southworth@vyatta.com>  Wed, 29 Feb 2012 19:19:00 +0000
+
 vyatta-cfg-vpn (0.12.85) unstable; urgency=low
 
   * Bugfix 6839: Warn that pre-shared key changes aren't loaded until a
