--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.87) unstable; urgency=low
+
+  * new branch
+
+ -- Deepti Kulkarni <deepti@vyatta.com>  Sat, 03 Mar 2012 02:25:40 -0800
+
 vyatta-cfg-vpn (0.12.86) unstable; urgency=low
 
   * Fix uninitilized  bug
