--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.91) unstable; urgency=low
+
+  * Bugfix 8100: Be flexible in char accepted in id field.
+
+ -- Saurabh Mohan <saurabh@vyatta.com>  Thu, 31 May 2012 18:40:43 -0700
+
 vyatta-cfg-vpn (0.12.90) unstable; urgency=low
 
   * Default keyexchange ikev1.
