--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.103) unstable; urgency=low
+
+  * Bugfix 8358: Handle vti tunnel src, dst changing while the bind
+    tunnel name stays the same.
+
+ -- Saurabh Mohan <saurabh@vyatta.com>  Tue, 18 Sep 2012 12:51:32 -0700
+
 vyatta-cfg-vpn (0.12.102) unstable; urgency=low
 
   * Bugfix 8289: Vti mark values should be implicit
