--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.105+daisy2) unstable; urgency=low
+
+  * DMVPN support with profiles.
+
+ -- Saurabh Mohan <saurabh@vyatta.com>  Thu, 27 Dec 2012 16:49:19 -0800
+
 vyatta-cfg-vpn (0.12.105+daisy1) unstable; urgency=low
 
   * create daisy branch
