--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.105+vyos1+helium4) unstable; urgency=low
+
+  * Remove the VTI script after use.
+
+ -- Daniil Baturin <daniil@baturin.org>  Sun, 19 Oct 2014 18:01:23 +0200
+
 vyatta-cfg-vpn (0.12.105+vyos1+helium3) unstable; urgency=low
 
   [ Kim Hagen ]
