--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.105+vyos2+lithium2) unstable; urgency=low
+
+  * Update changelog for the new branch.
+
+ -- Daniil Baturin <daniil@baturin.org>  Wed, 29 Oct 2014 22:22:22 +0100
+
 vyatta-cfg-vpn (0.12.105+vyos2+lithium1) unstable; urgency=low
 
   * new branch
