--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+vyatta-cfg-vpn (0.12.105+vyos2+lithium3) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-cfg-vpn: move scripts/vtiIntf.pm to lib/Vyatta/VPN/vtiIntf.pm
+  * vyatta-cfg-vpn: update parseVtiTun to account for vti changes
+  * vyatta-cfg-vpn: update vti creation in line with changes to strongswan
+  * vyatta-cfg-vpn: reduce the vti mark base to prevent integer overflow
+  * vyatta-cfg-vpn: formatting changes for style consistency
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Fri, 05 Dec 2014 00:24:52 +0000
+ 
 vyatta-cfg-vpn (0.12.105+vyos2+lithium2) unstable; urgency=low
 
   * Update changelog for the new branch.
