--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.105+vyos2+lithium4) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-cfg-vpn: remove the cfgvti helper program
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Fri, 05 Dec 2014 07:53:03 +0000
+
 vyatta-cfg-vpn (0.12.105+vyos2+lithium3) unstable; urgency=low
 
   [ Alex Harpin ]
