--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.105+vyos2+lithium7) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-cfg-vpn: update pre-shared secret key help for single quotes
+  
+ -- Alex Harpin <development@landsofshadow.co.uk>  Sat, 17 Jan 2015 19:00:11 +0000
+ 
 vyatta-cfg-vpn (0.12.105+vyos2+lithium6) unstable; urgency=low
 
   * Update maintainer address
