--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+vyatta-cfg-vpn (0.12.105+vyos1+helium7) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-cfg-vpn: update pre-shared secret key help for single quotes
+
+  [ Daniil Baturin ]
+  * Bug #348: remove unnecessary restrictions on the PSK format.
+
+ -- Daniil Baturin <daniil@baturin.org>  Mon, 19 Jan 2015 12:42:36 +0100
+
 vyatta-cfg-vpn (0.12.105+vyos1+helium6) unstable; urgency=low
 
   [ Alex Harpin ]
