--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.105+vyos1+helium9) unstable; urgency=low
+
+  * Remove @ from the id/remote-id help string. It was never required.
+
+ -- Daniil Baturin <daniil@baturin.org>  Mon, 19 Jan 2015 13:00:55 +0100
+
 vyatta-cfg-vpn (0.12.105+vyos1+helium8) unstable; urgency=low
 
   * Force release
